coding collection fix can not display post excerpt add replace_array js function optimize some css style

--- a/includes/custom-contribution/static/css/src/style.css
+++ b/includes/custom-contribution/static/css/src/style.css
@@ -70,6 +70,9 @@
 			left: 0;
 			width: 10%;
 			height: 2px;
+			-webkit-transition:all .5s;
+			-moz-transition:all .5s;
+			transition:all .5s;
 		}
 			#ctb-file-progress-bar:after{
 				width: 10px;
