fix some json encode error optimize collection css

--- a/includes/custom-contribution/static/css/src/style.css
+++ b/includes/custom-contribution/static/css/src/style.css
@@ -179,10 +179,7 @@
 #fm-ctb .checkbox-select{
 	font-size: 1.3em;
 }
-	.ctb-tag .label .fa{
-		display: none;
-	}
-	.ctb-tag input:checked ~ .label{
+	.ctb-tag input:checked + .label{
 		background: #4cae4c;
 		color: #fff;
 	}
