--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -997,7 +997,7 @@ label.error{
  * 
  * @type module
  * @version 1.0.1
- * @author KM@INN STUDIO
+ * @author INN STUDIO <inn-studio.com>
  * 
  */
 .crumb{
