--- a/includes/custom-edit/static/css/src/style.css
+++ b/includes/custom-edit/static/css/src/style.css
@@ -4,11 +4,19 @@
 .edit-post-thumbnail img{
 	max-width: 80px;
 }
-.edit-post-title{
+.edit-post-title h4{
+	font-size: 1em;
+	margin-top: 0;
+}
+.edit-post-action{
+	visibility: hidden;
 }
 .edit-table tr:hover{
 	background: #eee;
 }
+	.edit-table tr:hover .edit-post-action{
+		visibility: visible;
+	}
 	.edit-table thead {
 		background: #eee;
 	}
