--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -8,11 +8,11 @@
 	margin: 0;
 }
 .btn-group:hover > .dropdown-menu{
-	margin-top: 0px;
 	display: block;
 }
 .btn-group .dropdown-menu{
 	left: auto;
+	margin-top: 0;
 	right: 0;
 }
 
@@ -28,25 +28,50 @@
 .form-group{
 	margin-bottom: 20px;
 }
+
 .navbar-form,
 .navbar-left,
 .navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand{
 	/*margin-left: -10px;*/
 }
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{
-	background: #428BCA;
-	color:#fff;
+.navbar-inverse .navbar-nav a:hover,
+.navbar-inverse .navbar-nav li:hover > a{
+	background: rgba(0,0,0,.1);
 }
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus,
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus,
-.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
-.dropdown-menu > li > a:focus, 
-.dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav .dropdown:hover > a{
-	background: #428BCA;
+.dropdown-menu > li > a:hover, 
+.dropdown-menu > li > a:focus,
+.navbar-inverse .navbar-nav > li > a:hover, 
+.navbar-inverse .navbar-nav > li > a:focus{
+	background: #0288D1;
 	color:#fff;
 }
 
+.navbar-inverse .navbar-nav > li > a,
+.navbar-inverse .navbar-brand{
+	color: #fff;
+}
+
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus,
+.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
+.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
+.navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus,
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .active > a ,
+.navbar-inverse .navbar-nav > .open > a, 
+.navbar-inverse .navbar-nav > .open > a:hover, 
+.navbar-inverse .navbar-nav > .open > a:focus,
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:hover, 
+.navbar-inverse .navbar-nav > li > a:focus{
+	background: rgba(0,0,0,.1);
+}
+.navbar-inverse .navbar-brand,
+.navbar-inverse .navbar-nav > li > a {
+	text-shadow: 0 1px 2px rgba(0,0,0,.5);
+
+}
 .media-left .media-object,
 .media-left img{
 	max-width: none;
@@ -72,7 +97,7 @@
 	.nav-tabs > li > a:hover, .nav-tabs > li > a:focus, .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus, .nav-tabs .open > a, .nav-tabs .open > a:hover, .nav-tabs .open > a:focus{
 	}
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus{
-	color:#428BCA;
+	color:#0288D1;
 	font-weight: bold;
 }
 /**
@@ -126,6 +151,9 @@ label{
 	padding: 10px 20px;
 	margin-bottom: 0;
 }
+.panel-primary .panel-heading{
+	background-color: #0288D1;
+}
 .panel-body{
 	padding: 20px 20px 0 20px;
 }
@@ -170,7 +198,7 @@ a:active{
 }
 a:focus,
 a:active{
-	transform: translate(0px, 1px);
+	/*transform: translate(0px, 1px);*/
 }
 .hide,.none{display: none;}
 img{
@@ -225,15 +253,14 @@ img{
 	padding: 8px 10px;
 	margin: 4px 0;
 	font-size: 18px;
-	color:#999;
+	color:#fff;
 	border-radius: 4px;
 }
 	.mx-tool:hover,
 	.mx-tool:active,
 	.mx-tool:focus{
-		color:#333;
 		background: rgba(0,0,0,.1);
-		
+		color:#fff;
 	}
 /**
  * .mx-card
@@ -241,11 +268,11 @@ img{
 .mx-card-header > h3{
 	padding: 0;
 	margin: 0;
-	color:#428BCA;
+	color:#0288D1;
 	font-size: 18px;
 }
 	.mx-card-header > h3 a{
-		color:#428BCA;
+		color:#0288D1;
 	}
 	.mx-card .caption .row{
 		font-size: 12px;
@@ -349,7 +376,7 @@ img{
  * .post-mixed-list
  */
 .mx-panel .panel-heading{
-	color:#428BCA;
+	color:#0288D1;
 }
 	.mx-panel .panel-body{
 		padding-bottom: 0;
@@ -401,7 +428,7 @@ img{
 		margin: 0 0 5px;
 		font-weight: bold;
 		line-height: 1.5;
-		color:#428BCA;
+		color:#0288D1;
 	}
 
 	.post-mixed-list .area-tx {
@@ -748,13 +775,13 @@ label.error{
 		}
 			.comment-list .comment-meta-data a:hover,
 			.comment-list .comment-meta-data a:active{
-				color:#428BCA;
+				color:#0288D1;
 				text-decoration: underline;
 			}
 	.comment-list .author{
 	}
 		.comment-list .author a{
-			color:#428BCA;
+			color:#0288D1;
 		}
 	
 .comment-list .parent{
@@ -848,19 +875,25 @@ label.error{
 	font-size: 12px;
 	border-radius: 0;
 	height: 30px;
-	border-top: none;
+	border: none;
 	margin-bottom: 0;
-	box-shadow: 0 1px 3px rgba(0,0,0,.3);
+	background: none;
+	margin-bottom: -30px;
+	color: #fff;
+	text-shadow: 0 1px 1px rgba(0,0,0,.3);
 }
-.top-bar:after{
-	position: absolute;
-	background: url(../../../images/min/frontend/rainbow.png);
-	width: 100%;
-	height: 1px;
-	content:'';
-	top: 0px;
+	.top-bar a{
+		color: #fff;
+		background: none;
+		border: none;
+	}
+		.top-bar a:hover{
+			background: rgba(0,0,0,.1);
+		}
+	.top-bar .dropdown-menu{
+		text-shadow: none;
+	}
 
-}
 /**
  * .top-bar-menu-container
  */
@@ -871,6 +904,9 @@ label.error{
 		line-height: 30px;
 		padding: 0 10px;
 	}
+	.top-bar .navbar-nav > li > a:hover{
+		background: rgba(0,0,0,.1);
+	}
 /**
  * .top-bar-tools
  */
@@ -879,6 +915,8 @@ label.error{
 	padding-top: 4px;
 	margin-bottom: 0;
 }
+	.top-bar-tools .btn-group{
+	}
 	.top-bar-tools .user-avatar{
 
 	}
@@ -931,23 +969,34 @@ label.error{
  */
 .banner{
 	display: block;
+	margin-top: -30px;
 	margin-bottom: -20px;
-	border-radius: 0 0 4px 4px;
-	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	background: linear-gradient(#03A9F4,#0288D1);
 }
 	.banner img{
+		margin-top: -0.1px;
+		display: block;
 		width: 100%;
 	}
 
 .main-nav{
+	background: #0288D1;
 	margin-top: 20px;
 	border: none;
-	box-shadow: 0 1px 3px rgba(0,0,0,.3);
+	box-shadow: 0 3px 3px rgba(0,0,0,.3);
 	border-radius: 0;
+	text-shadow: 0 1px 2px rgba(0,0,0,.5);
 }
+	.main-nav .navbar-toggle .icon-bar{
+		background-color: #fff;
+	}
+	.main-nav .navbar-toggle{
+		margin-top: 10px;
+		background: none;
+		border: none;
+		margin-right: -10px;
+	}
 
-.menu-header .navbar-nav > li > a{
-}
 .mx-navbar-toggle{
     position: relative;
     float: right;
@@ -1054,8 +1103,8 @@ label.error{
 	}
 		.singluar-post .post-header a:hover,
 		.singluar-post .post-header a:active{
-			color:#428BCA;
-			border-color: #428BCA;
+			color:#0288D1;
+			border-color: #0288D1;
 		}
 	.singluar-post .post-meta{
 		float: left;
@@ -1366,7 +1415,7 @@ label.error{
 		padding: 30px 30px 0;
 		text-align: center;
 		border: none;
-		color: #428BCA;
+		color: #0288D1;
 		margin-bottom: 0;
 	}
 	.mx-sign-panel.has-avatar{
@@ -1446,7 +1495,7 @@ label.error{
 		top: 0;
 		right: 10px;
 		font-size: 3em;
-		color:#428bca;
+		color:#0288D1;
 		opacity: .1;
 		font-weight: bold;
 	}
@@ -1608,11 +1657,32 @@ label.error{
  * .pager
  */
 .pager .active span{
-	border-color: #428BCA;
-	background: #428BCA;
+	border-color: #0288D1;
+	background: #0288D1;
 	color:#fff;
 }
 @media (min-width: 768px){
+	.main-nav .dropdown-menu{
+		text-shadow: none;
+	}
+	.main-nav:before{
+		position: absolute;
+		top: -50px;
+		left: 0;
+		width: 100%;
+		height: 50px;
+		content:'';
+		background: linear-gradient(rgba(3,155,229,0),#0288D1);
+	}
+	.main-nav .dropdown-menu{
+		text-shadow: none;
+	}
+	.navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
+	.main-nav .dropdown-menu > li:hover > a,
+	.main-nav .dropdown-menu > li > a:hover{
+		background: #0288D1;
+		color: #fff;
+	}
 	.dropdown:hover .dropdown-menu {
 		display: block;
 	}
@@ -1633,6 +1703,13 @@ label.error{
 @media (max-width: 767px){
 	.main-nav{
 		margin: 0 0 20px;
+	}
+	.navbar-inverse .navbar-nav .open .dropdown-menu > li > a{
+		color: #fff;
+	}
+	.navbar-inverse .navbar-toggle:hover, 
+	.navbar-inverse .navbar-toggle:focus{
+		background: rgba(0,0,0,.1);
 	}
 	.mx-form{
 		margin-top: 0;
