--- a/includes/custom-dashboard/static/css/src/style.css
+++ b/includes/custom-dashboard/static/css/src/style.css
@@ -23,14 +23,12 @@
 }
 @media (min-width: 768px) {
 	#account-navbar .navbar{
-		box-shadow: 0 1px 3px rgba(0,0,0,.1);
-		border: 1px solid #DDD;
-		border-radius: 4px;
+		border-radius: 2px;
+		overflow: hidden;
 	}
 	#account-navbar .navbar-header{
 		float: none;
 		background: #F5F5F5;
-		border-radius: 4px;
 	}
 	#account-navbar .navbar .navbar-collapse {
 		padding: 0;
