--- a/static/css/src/frontend/style.css
+++ b/static/css/src/frontend/style.css
@@ -320,17 +320,15 @@ img{
 	.widget > .panel-heading + div{
 		padding: 0;
 		margin: 20px;
+		line-height: 1.5;
 	}
 	.widget ul{
 		list-style-type: square;
-		padding-left: 2em;
-		padding-right: 1em;
+		padding-left: 1em;
 	}
 		.widget ul li{
-			margin:0 0 .5em;
-			padding-bottom:5px;
+			margin:0;
 			padding-left:5px;
-			border-bottom:1px dashed #F5F5F5;
 		}
 			.widget ul li:last-child{
 				border-bottom:none;
@@ -412,8 +410,11 @@ img{
 	right: 10px;
 	top: 10px;
 }
-.widget_hot_tags a:hover,
-.widget_hot_tags a:active{
+.widget_hot_tags .widget-content{
+	line-height: 1.3;
+}
+.widget_hot_tags .hot-tag:hover,
+.widget_hot_tags .hot-tag:active{
 	background: #eee;
 	text-shadow: 0 1px 0 #fff;
 }
@@ -1183,6 +1184,7 @@ label.error{
 }
 .widget_comments .text{
 	color:#666;
+	line-height: 1.5;
 }
 	.widget_comments p{
 		margin-bottom: 0;
