--- a/includes/custom-point/static/css/src/style.css
+++ b/includes/custom-point/static/css/src/style.css
@@ -9,7 +9,7 @@
 	color:#428BCA;
 	margin-bottom: 20px;
 }
-.history-group .point-name,
+.history-group .point-icon,
 .history-group .history-time{
 	color: #b2b2b2;
 }
